# sample_notes

./: .env.example  .gitignore  Dockerfile  README.md  db.env.example  docker-compose.yaml  keycloak.env.example  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  test.yml
sample_notes/: __main__.py
sample_notes/config/: __init__.py  app_settings_global.py
sample_notes/db/alembic/: env.py
sample_notes/db/connection/: __init__.py  session.py
sample_notes/db/entities/: notes.py
sample_notes/dto/: notes.py
sample_notes/endpoints/: health_check.py  notes.py  routers.py
sample_notes/endpoints/admin/: router.py  users.py
sample_notes/exceptions/logic/: common.py
sample_notes/exceptions/utils/: exceptions.py
sample_notes/logic/: notes.py
sample_notes/logic/admin/: users.py
sample_notes/schemas/: notes.py
sample_notes/schemas/users/: __init__.py
sample_notes/utils/: dependencies.py
test_fastapi/: __init__.py  __main__.py  fastapi_init.py  version.py
test_fastapi/config/: __init__.py  app_settings_global.py
test_fastapi/db/: alembic.ini
test_fastapi/db/alembic/: env.py
test_fastapi/db/connection/: __init__.py  session.py
test_fastapi/db/entities/: __init__.py  notes.py
test_fastapi/dto/: __init__.py
test_fastapi/dto/users/: __init__.py  authorization.py  users.py
test_fastapi/endpoints/: __init__.py  health_check.py  notes.py  routers.py
test_fastapi/endpoints/admin/: __init__.py  users.py
test_fastapi/endpoints/users/: __init__.py  login.py  registration.py
test_fastapi/exceptions/logic/: common.py  users.py
test_fastapi/exceptions/utils/: exceptions.py
test_fastapi/logic/: __init__.py  notes.py
test_fastapi/logic/admin/: __init__.py  users.py
test_fastapi/logic/users/: __init__.py  authorization.py  get_token.py  registration.py  user_info.py
test_fastapi/schemas/: __init__.py  notes.py
test_fastapi/utils/: dependencies.py  key_builder.py  tokens.py
tests/: test.py
(+14 files in other folders)
